# RoeLang

./: .clang-format  Bindings.cpp  Bindings.h  CMakeCache.txt  CMakeLists.txt  Context.cpp  Context.h  Driver.cpp  Driver.h  FunctionRegistrar.h  Loader.cpp  Loader.h  Module.cpp  Module.h  StringOps.cpp  StringOps.h  Types.cpp  Types.h  in.txt  vmnew.kdev4
AST/: ASTArgList.cpp  ASTArgList.h  ASTArithmetical.cpp  ASTArithmetical.h  ASTAssignment.cpp  ASTAssignment.h  ASTBlock.cpp  ASTBlock.h  ASTCStr.cpp  ASTCStr.h  ASTDouble.cpp  ASTDouble.h  ASTElement.cpp  ASTElement.h  ASTElements.h  ASTException.h  ASTFunctionCall.cpp  ASTFunctionCall.h  ASTFunctionParameters.cpp  ASTFunctionParameters.h  ASTIf.cpp  ASTIf.h  ASTLogical.cpp  ASTLogical.h  ASTLong.cpp  ASTLong.h  ASTReturn.cpp  ASTReturn.h  ASTRule.cpp  ASTRule.h  ASTRules.cpp  ASTRules.h  ASTStrSlice.cpp  ASTStrSlice.h  ASTVariable.cpp  ASTVariable.h
AutoFormat/: .clang-format  format_all.sh
Exceptions/: ASTException.h  ExceptionBase.h  RuntimeException.cpp
Functions/: Bindings.cpp  Bindings.h  FunctionRegistrar.cpp  FunctionRegistrar.h  StringOps.cpp  StringOps.h
Lexer/: FlexLexer.h  Scanner.cpp  Scanner.h  Scanner.ll
Module/: Context.cpp  Context.h  ForwardDecls.h  ForwardDeclsImpl.h  Module.cpp  Module.h  RoeRule.cpp  RoeRule.h  VariableInfo.cpp  VariableInfo.h
Parser/: Driver.cpp  Driver.h  Parser.cpp  Parser.h  Parser.hh  Parser.yy  YYTYPE.h  location.hh  position.hh  stack.hh
RoeLangLib/: CMakeLists.txt  Loader.cpp  Loader.h  Makefile  combine.sh
Test/: CMakeLists.txt  DummyContainer.cpp  DummyContainer.h  MustFail1.roe  MustFail2.roe  MustFail3.roe  MustFail4.roe  Test.cpp  Test1.roe  Test2.roe  in.txt
Types/: Types.cpp  Types.h
